# SemiEuler

./: CMakeLists.txt  README.md  setup.sh
src/: conf.h  main.cpp
